[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rl-obstacle-avoidance"
version = "0.1.0"
description = "SAC-based RL agent for highway obstacle avoidance using a kinematic bicycle model"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Tej Deepak Amin" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy==1.26.4",
    "matplotlib==3.9.2",
    "gymnasium",
    "stable-baselines3[extra]",
    "casadi==3.7.0",
    "tensorboard==2.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
